# particle-life-plus-plus

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.bat  vcpkg.json
include/plpp/: clock.h  configurations.h  overlay.h  physics_engine.h  renderer.h  resource_manager.h  settings.h  shader.h  simulator.h
res/shaders/: particles.comp  particles.frag
shaders/: circle.frag  circle.vert  particle.vert  particles.comp  particles.compute  particles.vert
src/: clock.cpp  clock.h  configurations.cpp  configurations.h  constants.h  main.cpp  overlay.cpp  overlay.h  particle.h  physics.cpp  physics.h  physics_engine.cpp  physics_engine.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  settings.cpp  settings.h  shader.cpp  shader.h  simulator.cpp  simulator.h  texture.cpp  texture.h  thread_pool.cpp  thread_pool.h
